docs/v2.0.0/_sources/gallery/experiment/sphere/sphere_Qsca_vs_index.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/sphere/sphere_Qsca_vs_index.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_sphere_sphere_Qsca_vs_index.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_sphere_sphere_Qsca_vs_index.py:


Sphere: Qsca vs index
=====================

.. GENERATED FROM PYTHON SOURCE LINES 8-9

Importing the package dependencies: numpy, PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 9-16

.. code-block:: Python

    import numpy as np

    from PyMieSim.experiment.scatterer import Sphere
    from PyMieSim.experiment.source import Gaussian
    from PyMieSim.experiment import Setup
    from PyMieSim.units import nanometer, degree, watt, AU, RIU








.. GENERATED FROM PYTHON SOURCE LINES 17-18

Defining the source to be employed.

.. GENERATED FROM PYTHON SOURCE LINES 18-24

.. code-block:: Python

    source = Gaussian(
        wavelength=[500., 1000., 1500.] * nanometer,
        polarization=30. * degree,
        optical_power=1e-3 * watt,
        NA=0.2 * AU
    )







.. GENERATED FROM PYTHON SOURCE LINES 25-26

Defining the ranging parameters for the scatterer distribution

.. GENERATED FROM PYTHON SOURCE LINES 26-33

.. code-block:: Python

    scatterer = Sphere(
        diameter=800. * nanometer,
        property=np.linspace(1.3, 1.9, 150) * RIU,
        medium_property=1. * RIU,
        source=source
    )








.. GENERATED FROM PYTHON SOURCE LINES 34-35

Defining the experiment setup

.. GENERATED FROM PYTHON SOURCE LINES 35-37

.. code-block:: Python

    experiment = Setup(scatterer=scatterer, source=source)








.. GENERATED FROM PYTHON SOURCE LINES 38-39

Measuring the properties

.. GENERATED FROM PYTHON SOURCE LINES 39-41

.. code-block:: Python

    dataframe = experiment.get('Qsca')








.. GENERATED FROM PYTHON SOURCE LINES 42-43

Plotting the results

.. GENERATED FROM PYTHON SOURCE LINES 43-44

.. code-block:: Python

    dataframe.plot_data(x="scatterer:property")



.. image-sg:: /gallery/experiment/sphere/images/sphx_glr_sphere_Qsca_vs_index_001.png
   :alt: sphere Qsca vs index
   :srcset: /gallery/experiment/sphere/images/sphx_glr_sphere_Qsca_vs_index_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='refractive_index_unit', ylabel='dimensionless'>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.243 seconds)


.. _sphx_glr_download_gallery_experiment_sphere_sphere_Qsca_vs_index.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: sphere_Qsca_vs_index.ipynb <sphere_Qsca_vs_index.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: sphere_Qsca_vs_index.py <sphere_Qsca_vs_index.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: sphere_Qsca_vs_index.zip <sphere_Qsca_vs_index.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
